Structuring the discussion of the development.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -128,6 +128,28 @@
  publisher = {Dept of Computing Science, University of Glasgow},
  year = {2003},
 }
+@inproceedings{Lee:2012,
+ author = {Lee, Gyesik and Oliveira, Bruno C. D. S. and Cho, Sungkeun and Yi,
+                  Kwangkeun},
+ title = {GMETA: A Generic Formal Metatheory Framework for First-order
+                  Representations},
+ booktitle = {Proceedings of the 21st European Conference on Programming
+                  Languages and Systems},
+ series = {ESOP'12},
+ year = {2012},
+ isbn = {978-3-642-28868-5},
+ location = {Tallinn, Estonia},
+ pages = {436--455},
+ numpages = {20},
+ url = {http://dx.doi.org/10.1007/978-3-642-28869-2_22},
+ doi = {10.1007/978-3-642-28869-2_22},
+ acmid = {2259270},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {Coq, POPLmark challenge, datatype-generic programming,
+                  first-order representations, mechanization, variable
+                  binding},
+}
 @article{Wadler:2014,
 author = {Wadler, Philip},
 title = {Propositions as sessions},
