--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -48,21 +48,6 @@ IMP
 \end{comment}
 \end{abstract}
 
-\begin{comment}
-\section{Issues}
-
-\begin{itemize}
-\item What is required of a Metatheory library for linear type systems?
-  Permutation reasoning? Weakening/Contraction for non-linear components?
-\item Discuss the different approaches that were taken to maintain close
-  correspondence with the paper presentation
-\item Make sure to note that the paper leaves details (a lot of the ``cruft'')
-  out of the proofs e.g. where weakening is applied in the typing derivations
-\item Mention the use of Metatheory and its limitations when mechanising
-  linear type systems like GV/CP
-\end{itemize}
-\end{comment}
-
 \section{Introduction}\label{sec:intro}
 
 Distributed communication systems are becoming increasingly prevalent in
@@ -122,7 +107,7 @@ $\pi$-calculus type systems~\cite{Gay:2001:FFP}, the current work focuses on
 the lambda calculus to provide a basis on which session types for mainstream
 programming languages can be studied, whilst taking advantage of previous
 proof effort and specialising only for those parts unique to the particular
-system. The framework is heavily based on calculi developed by
+system. The starting point for the framework is the calculi developed by
 \citeauthor{Wadler:2014}~\cite{Wadler:2014} describing a relationship between
 classical linear logic (CP) and a functional language with session types (GV).
 
@@ -141,7 +126,7 @@ these two disciplines by verifying a session-based $\pi$-calculus system (\S
 \subsubsection{Preamble}\label{sec:pre}
 
 The definition of session types will be important for the remainder:
-\input{../proposal/session-types.tex}
+\input{../paper/session-types.tex}
 
 Here, I use a modified version of the definition given by
 \citeauthor{Gay:2010:LAST}~\cite{Gay:2010:LAST} where I have omitted recursive
@@ -172,16 +157,17 @@ translation relation. They use a binary reduction relation and a labelled
 transition system to represent process reduction and process action with its
 environment as is standard~\cite{Sangiorgi:2001}.
 
+\input{../paper/sill-branch-choice-rules}
+
 They represent dual intuitionistic linear logic as a sequent calculus
 providing logical connectives which have session-based interpretations in
-$\pi$DILL. Consider their rules for branch and choice in $\pi$DILL, which have
-only two alternatives (cf. multiple alternatives in the standard definition in
-\S~\ref{sec:pre}):
-\input{../proposal/sill-branch-choice-rules}
+$\pi$DILL. Consider their rules for branch and choice in $\pi$DILL in
+Figure~\ref{fig:sill-branching}, which have only two alternatives
+(cf. multiple alternatives in the standard definition in \S~\ref{sec:pre}).
 
 Note that branch and choice both have some notion of branching (R rules for
 $\oplus$/L rules for $\with$) and at least for \& this is counter-intuitive in
-a session-based setting, since the intutition for \& is that of
+a session-based setting, since the intuition for \& is that of
 \emph{offering} (receiving) a choice between alternatives rather than
 \emph{making} (sending) the choice. Here, however, the intuition should be
 extended to account for its location in the typing judgement. The channel is
@@ -546,12 +532,194 @@ studying programming with session types.
 
 \section{Formalisation}
 
-I describe the formalisation as it currently stands in this section.
+The formalisation was performed using the Coq proof
+assisstant~\cite{Coq:manual}. In the spirit of the POPLMARK
+challenge~\cite{Aydemir:2005:MMM}, the development utilises available
+libraries and infrastructure as much as possible. In particular,
+\citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} developed a metatheory
+library for handling, among other things, association lists (environments) and
+free variable representation. The current development uses the version of the
+library distributed by~\citeauthor{Park:2014:MMW}~\cite{Park:2014:MMW} which
+has been updated for Coq version 8.4pl4. One goal of the formalisation effort
+was to minimise the extent to which the development differs from the
+pen-and-paper presentation and avoid questions of adequacy of the
+representation. Some changes were made to ease the mechanisation and are
+highlighted where they occur.
 
+The locally nameless first-order representation for binders and free variables
+was adopted for both GV and CP, following
+\citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}. This first-order
+variant prevents variable-capture issues when compared with other first-order
+approaches. Alternatively, I could have chosen a higher-order abstract syntax
+(HOAS) approach such as the parametric version (PHOAS) described
+by~\citeauthor{Chlipala:2008:PHOAS}~\cite{Chlipala:2008:PHOAS}. PHOAS relies
+on the metalanguage (Coq, in this case) for handling binders and substitution
+so has less overhead in managing syntax than the locally nameless
+approach. However, it was less clear how to handle linearity using this
+approach and has the disadvantage of being able to represent terms not valid
+in the language being mechanised (so called ``exotic'' terms). Further, a
+higher-order approach would prevent the use of the Metatheory library which
+provides a number of useful tactics for manipulating typing contexts. Previous
+efforts to mechanise \fpop~\cite{Park:2014:MMW} illustrate how to handle a
+language containing both linear and non-linear contexts. However, to stay true
+to CP/GV, I maintained a single context. Interestingly, it became clear that
+the mechanised version of CP required explicit weakening and contraction to
+facilitate the reduction rules.
+
+For handling binder freshness, I chose to adopt the cofinite quantification
+approach described by~\cite{Aydemir:2008:EFM}, which excludes a finite set of
+variables from being considered as the binder. In contrast, the traditional
+``exists-fresh'' approach, where the binder is only required to be fresh
+within the abstraction's body, does not produce strong enough induction
+principles in some cases. This change will necessitate changes to the typing
+rules of GV and CP. Consider for instance the Connect rule in
+GV~\cite{Wadler:2014} (C) and its corresponding cofinite quantification
+version (CCO): \input{with-connect-rule}
+
+The conclusion specifies a variable in (C) but a type in (CCO) (de Bruijn
+index rather than a name). Thus, in the premise for (CCO) one can choose a
+suitably fresh $x$ in each premise. Note that, $L$ can be chosen such that
+$\Psi \cup \Phi \cup \fv(M) \cup \fv(N) \subseteq L$, where $\fv(M)$ are the
+set of free variables in term $M$, and $x$ can be the same in both
+premises. Similar changes are made to the rules for CP (see
+\S~\ref{sec:cp}). These changes do not alter the typing of processes nor the
+semantics of the translation from GV to CP. An equivalence between
+``exists-fresh'' and cofinite quantification definitions of the simply-typed
+$\lambda$-calculus is given by
+\citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}, and I suspect a similar
+result could be derived straightforwardly (but tediously) for the CP/GV
+system.
+
+
+\begin{comment}
+\section{Issues}
+
+\begin{itemize}
+\item What is required of a Metatheory library for linear type systems?
+  Permutation reasoning? Weakening/Contraction for non-linear components?
+\item Discuss the different approaches that were taken to maintain close
+  correspondence with the paper presentation
+\item Make sure to note that the paper leaves details (a lot of the ``cruft'')
+  out of the proofs e.g. where weakening is applied in the typing derivations
+\item Mention the use of Metatheory and its limitations when mechanising
+  linear type systems like GV/CP
+\end{itemize}
+\end{comment}
+
+\subsection{The process calculus CP}\label{sec:cp}
+
+\begin{comment}
+FIGURES
+
+propositions
+
+processes
+
+typing judgements
+
+equivalences and axiomatic cut
+
+principal cut rules
+
+commuting conversions
+\end{comment}
+
+Formalising the process calculus CP provided many challenges for the
+metatheory library since to my knowledge, the library has never been applied
+to a process calculus before. So for instance, in the lambda calculus one
+typically does not work up to permutation of binders, whereas in a process
+calculus these kinds of structural equivalences are standard.
+
+Note that the rules for polymorphism, $\exists$ and $\forall$, are defined but
+cut elimination on them is not. Since GV (\S~\ref{sec:gv}) does not support
+polymorphism the reduction rules are unnecessary for the translation. Future
+work is to support reduction under these terms.
+
+\subsection{The functional language GV}\label{sec:gv}
+
+\begin{comment}
+FIGURES
+
+types
+
+terms
+
+typing judgements
+\end{comment}
+
+\subsection{CPS translation GV to CP}
+
+Currently the formalisation does not handle this. Future work.
+
+for an unbound index so this decision is sound. A consequence is that I must
+define a notion of opening language terms involving binders as described
+by~\citeauthor{Aydemir:2008:EFM}. For example, an abstraction with body term
+$t$ which is well-typed if $t$ is well-typed when its unbound index,
+representing the argument to the abstraction, is replaced by some fresh
+variable $x$, written $t^x$. Some terms in GV require multiple binders but I
+believe it will be straightforward to extend this notion. Unfortunately, I
+must define similar operations on CP terms and handle substitution and opening
+on them as well as propositions which can accept propositional variables. I
+hope to be able to generalise as much as possible with the help of the
+Metatheory library. say something about gmeta here and its automatic
+generation of these infrastructure lemmas
+
+While the aim is to be faithful to \citeauthor{Wadler:2014}'s description, I
+may need to alter the approach slightly to avoid tricky formulations. For
+instance, instead of providing $n$-ary branch and choice in GV, I provide
+only binary versions of these operators to simplify the development. This
+change is not restrictive however, since CP itself provides only binary
+versions of plus ($\oplus$) and with ($\with$) constructs. Likewise, on a more
+technical note, I amalgamate all types into one inductive definition and
+provide a predicate for restricting typing rules to consider only valid
+session types. \citeauthor{Wadler:2014} defines GV types as a set of mutually
+recursive definitions; session types are types which may contain types as
+subcomponents (arguments to send, for example). Unfortunately, handling
+mutually inductive definitions in Coq can be quite involved; requiring one to
+either rely on the Coq system to provide a stronger mutual induction principle
+or defining one manually. Such a definition is possible, but it complicates
+elimination via the induction principle.
+
+Another aspect of the encoding is how to define terms. The intrinsic encoding
+described by~\citeauthor{Benton:2012:STT}~\cite{Benton:2012:STT} is one
+approach, indexing terms by their type so as to prevent ill-formed terms from
+being constructed. However, in the encoding for GV there are issues with using
+this encoding: $(1)$ it is not immediately clear how to handle linear contexts
+using the de Bruijn variable encoding, since in the intrinsic setting the
+environment supports weakening; $(2)$ an intrinsic encoding of terms would be
+complicated by the need to enforce that session types occur in certain
+instances (by use of a predicate); and $(3)$ well-typed terms require extra
+assumptions about binder freshness which cannot reasonably be expressed as a
+function type. For these reasons, an intrinsic approach does not offer much
+benefit since a well-typed term relation would still need to be
+defined. Therefore, I chose an extrinsic encoding for terms and define
+well-typed terms as a separate inductive type.
+
+\citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} note that the size of
+their language proof infrastructure is proportional to the number of binding
+constructs. In the case of a simply typed lambda calculus this is not onerous,
+but GV has four binding constructs, CP has six and propositions have two. It
+may be true that this approach results in too many auxiliary definitions and
+operations not relevant to the actual properties one wishes to prove. However,
+I believe that once this infrastructure has been defined, the system can be
+extended without concern for these binding constructs.
+
+\citeauthor{Park:2014:MMW} describe a technique for
+removing nonlinear contexts from typing judgements. While their work extended
+to \fpop it is not clear how to handle an environment containing both
+non-linear and linear types as in GV. I wish to maintain as close a
+relationship as possible to the paper system presented by
+\citeauthor{Wadler:2014}, so separating out the non-linear and linear
+components (as in \fpop) is not an option at this stage.
+
+
+I describe the formalisation as it currently stands in this section. The use
+of the metatheory library from UPenn provided useful tactics and properties
+regarding freshness of free variables and environments.
 
 \subsection{Future Work}
 
-There remains much to be done.
+In addition to that already mentioned: there remains much to be done.
 
 \section{Conclusions}
 
